# play

./: .gitignore  .gitmodules  LICENSE  README.md
play/: .clang-format  CMakeLists.txt  CMakeSettings.json  CMakeSettings_vs2022.json
play/app/: CMakeLists.txt  act.hpp  actor.hpp  actor.ipp  actor_container.hpp  actor_container.ipp  app.hpp  app.ipp  app_base.hpp  app_base.ipp  error.hpp  index.hpp  index.ipp  rcs_service.hpp  remote_call_service.hpp  service.hpp  session_container.hpp  system.hpp
play/app/alpha/: README.md
play/app/sigma/: README.md
play/base/: CMakeLists.txt  dynamic_snowflake.hpp  index.hpp  index.ipp  json_reader.hpp  logger.cpp  logger.hpp  macros.cpp  macros.hpp  object_pool.hpp  observer_ptr.hpp  stop_watch.hpp  string_util.hpp  uuid.cpp  uuid.hpp
play/db/: CMakeLists.txt  nanodbc.cpp
play/ensure/: CMakeLists.txt  act.cpp  act.hpp  act_base.hpp  act_composite.cpp  act_composite.hpp  act_ensure.cpp  act_ensure.hpp  act_factory.cpp  act_factory.hpp  act_parallel.cpp  act_parallel.hpp  act_serial.cpp  act_serial.hpp  blackboard.cpp  blackboard.hpp  bot.cpp  bot.hpp  ensure.cpp  ensure.hpp  ensure_app.cpp  ensure_app.hpp  flow.cpp  flow.hpp
play/ensure/acts/: act_message.cpp  act_message.hpp  act_wait_duration.cpp  act_wait_duration.hpp
play/example/: README.md
play/learn/: README.md
play/net/: CMakeLists.txt  asio.hpp  client.hpp  client.ipp  codec.hpp  frame_handler.hpp  protocol.hpp  pulse.hpp  pulse.ipp  pulse_fb.hpp  pulse_fb.ipp  pulse_listener.hpp  runner.cpp  runner.hpp  server.hpp  server.ipp  session.hpp  session.ipp  session_handler.hpp
play/net/frame/: flatbuffer_handler.hpp  flatbuffer_handler.ipp
play/net/protocol/: length_delimited.hpp  length_delimited.ipp  plain_protocol.hpp  plain_protocol.ipp  secure_protocol.hpp  secure_protocol.ipp  sodium_cipher.hpp  sodium_cipher.ipp  sodium_handshake.hpp  sodium_handshake.ipp  stream_protocol.hpp  stream_protocol.ipp
play/net/pulse/: pulse_caller.hpp
play/net/runner/: poll_runner.hpp  thread_runner.cpp  thread_runner.hpp  timer_service.hpp  timer_service.ipp
play/net/util/: address.cpp  address.hpp  serializer.hpp
play/robust/: CMakeLists.txt
play/robust/app/: CMakeLists.txt  act.hpp  actor.hpp  actor.ipp  app.cpp  app.hpp  app.ipp  app_base.hpp  app_base.ipp  app_fb.cpp  app_fb.hpp  error.hpp  object.hpp  service.hpp  system.hpp
play/robust/base/: CMakeLists.txt  dynamic_snowflake.hpp  json_reader.hpp  logger.cpp  logger.hpp  macros.cpp  macros.hpp  object_pool.hpp  serializer.hpp  stop_watch.hpp  string_util.hpp
play/robust/db/: CMakeLists.txt  nanodbc.cpp  summary.md  table_design.md
play/robust/ensure/: README.md  act.cpp  act.hpp  act_composite.cpp  act_ensure.cpp  act_ensure.hpp  act_factory.cpp  act_factory.hpp  act_parallel.cpp  act_parallel.hpp  act_serial.cpp  act_serial.hpp  behaviortree.md  bot.cpp  bot.hpp  ensure.cpp  ensure.hpp  ensure_act.hpp  ensure_app.cpp  ensure_app.hpp  flow.cpp  flow.hpp
play/robust/net/: CMakeLists.txt  asio.hpp  client.hpp  client.ipp  codec.hpp  frame_handler.hpp  protocol.hpp  protocol.ipp  runner.cpp  runner.hpp  server.hpp  server.ipp  session.hpp  session.ipp  session_handler.hpp
play/robust/net/flatbuffers/: flatbuffer_handler.hpp  flatbuffer_handler.ipp
play/robust/net/frame/: flatbuffer_handler.hpp  flatbuffer_handler.ipp
play/robust/net/protocol/: bytes_frame.hpp  length_delimited.cpp  length_delimited.hpp  length_delimited.ipp  plain_protocol.hpp  plain_protocol.ipp  protocol.hpp  secure_protocol.hpp  secure_protocol.ipp  session.hpp  session_handler.hpp  sodium_cipher.cpp  sodium_cipher.hpp  sodium_cipher.ipp  sodium_handshake.cpp  sodium_handshake.hpp  sodium_handshake.ipp  sodium_handshaker.cpp  sodium_handshaker.hpp  stream_protocol.hpp  stream_protocol.ipp
play/robust/net/runner/: poll_runner.hpp  thread_runner.cpp  thread_runner.hpp  timer_service.hpp  timer_service.ipp
play/robust/net/util/: serializer.hpp
play/robust/sure/: README.md
play/robust/test/: CMakeLists.txt  learn_fb_generated.h  learn_flatbuffers.cpp  learn_function_ptr.cpp  learn_streambuf.cpp  main.cpp  test_app.cpp  test_bytes_frame.cpp  test_client_server.cpp  test_codecs.cpp  test_fb.fbs  test_fb_generated.h  test_flatbuffers.cpp  test_json.cpp  test_logger.cpp  test_object_pool.cpp  test_plain_protocol.cpp  test_protocol.cpp  test_protocols.cpp  test_runner.cpp  test_secure_protocol.cpp  test_stream_protocol.cpp  test_string_util.cpp  test_timer.cpp
play/sample/: CMakeLists.txt  README.md
play/sample/alpha/: CMakeLists.txt  README.md  Tasks.md
play/sample/alpha/app/: CMakeLists.txt  actor.hpp  actor_base.hpp  alpha.hpp  alpha_app.cpp  alpha_app.hpp  app.cpp  app.hpp  main.cpp  service.hpp  service_base.hpp
play/sample/alpha/app/back/: actor_room_master.hpp  actor_user_master.hpp  lobby_master.cpp  lobby_master.hpp  master_lobby_user.hpp  room_master.cpp  room_master.hpp  room_proxy.cpp  room_proxy.hpp  room_runner_proxy.cpp  room_runner_proxy.hpp  user_master.cpp  user_master.hpp  user_proxy.cpp  user_proxy.hpp
play/sample/alpha/app/front/: actor_user.cpp  actor_user.hpp  lobby_runner.cpp  lobby_runner.hpp  lobby_user.cpp  lobby_user.hpp  lobby_user_actor.cpp  (+7 more)
play/sample/alpha/ensure/: CMakeLists.txt  act.hpp  act_base.hpp  client.hpp  ensure.cpp  ensure.hpp  ensure_alpha.cpp  ensure_alpha.hpp  main.cpp
play/sample/alpha/share/: CMakeLists.txt
play/sample/beta/: README.md  alpha2beta.md
play/sample/delta/: README.md
play/sample/sigma/: README.md
play/test/: CMakeLists.txt  learn_fb.fbs  learn_fb_generated.h  learn_function_ptr.cpp  learn_multiindex.cpp  learn_streambuf.cpp  test_actor_container.cpp  test_app.cpp  test_codecs.cpp  test_ensure.cpp  test_fb.fbs  test_fb_generated.h  test_flatbuffers.cpp  test_index.cpp  test_json.cpp  test_logger.cpp  test_object_pool.cpp  test_observer_ptr.cpp  test_plain_protocol.cpp  test_protocol.cpp  test_pulse.cpp  test_runner.cpp  test_secure_protocol.cpp  test_stream_protocol.cpp  test_string_util.cpp  test_timer.cpp
play/test/perf/: CMakeLists.txt  main.cpp
(+93 files in other folders)
